fix pallete menu gap

--- a/css/PalleteMenu.scss
+++ b/css/PalleteMenu.scss
@@ -77,7 +77,7 @@ nav{
         transition:$transition;
         transform:translateY(0px);
         width:192px;
-        margin-left:1vw;
+        // margin-left:1vw;
         border-radius:0 0 8px 8px;
 				box-shadow: 7px 7px 14px rgba(0,0,0,0.4);
 
